--- a/srcs/nginx/nginx.conf
+++ b/srcs/nginx/nginx.conf
@@ -75,10 +75,14 @@ http {
 
 				
 		server {
-			listen 					80;
-			location / {
-				return 301 			https://$host;
-			}
+			    listen 80;
+                listen [::]:80;
+
+                server_name _;
+			    location / {
+				    #return 301 			https://$host;
+                    try_files $uri $uri/ =404;
+			    }
 		}
 
 			
@@ -92,11 +96,10 @@ http {
 
 				server_name _;
 				location / {
+                     try_files $uri $uri/ =404;
 				}
 
 		}
-
-		
 
 
 		# Virtual Host configuration for example.com
