--- a/srcs/nginx/nginx.conf
+++ b/srcs/nginx/nginx.conf
@@ -78,10 +78,10 @@ http {
 			    listen 80;
                 listen [::]:80;
 
-                server_name _;
+                #server_name _;
 			    location / {
-				    #return 301 			https://$host;
-                    try_files $uri $uri/ =404;
+				    return 301 			https://$host$request_uri;
+                    #try_files $uri $uri/ =404;
 			    }
 		}
 
