--- a/srcs/metallb/metallb.yaml
+++ b/srcs/metallb/metallb.yaml
@@ -6,7 +6,7 @@ metadata:
 data:
   config: |
     address-pools:
-      - name: ip-pools
+      - name: default
         protocol: layer2
         addresses:
-          - 192.168.99.2-192.168.99.6
+          - 192.168.99.132-192.168.99.132
