--- a/srcs/nginx.yaml
+++ b/srcs/nginx.yaml
@@ -2,6 +2,10 @@ apiVersion: v1
 kind: Service
 metadata:
   name: nginx-service
+  labels:
+    app: nginx
+  annotations:
+    metallb.universe.tf/allow-shared-ip: shared
 spec:
   selector:
     app: nginx
@@ -15,8 +19,7 @@ spec:
     targetPort: 443
     protocol: TCP
   type: LoadBalancer
-  #externalIPs:
-    #- 192.168.99.117
+  
 
 ---
 
