--- a/srcs/wordpress/Dockerfile
+++ b/srcs/wordpress/Dockerfile
@@ -1,22 +1,29 @@
+FROM alpine
 
-# FROM alpine:latest
+RUN apk update && \
+    apk upgrade && \
+	apk add php7 php7-fpm php7-opcache php7-gd php7-mysqli \
+            php7-zlib php7-curl php7-mbstring php7-json php7-session curl \
+            php7-fpm 
+            #nginx openrc && \
+RUN curl 'https://wordpress.org/wordpress-5.5.1.tar.gz' > wordpress.tar.gz \
+    && tar xf wordpress.tar.gz \
+    && mv  wordpress /var/www
+#  rm -rf /var/www && \
+# COPY nginx.conf /etc/nginx/conf.d
 
-# RUN apk update \
-# && apk add php7 php7-fpm php7-opcache \
-# php7-gd php7-mysqli php7-zlib php7-curl \
-# php7-mbstring php7-json php7-session
+# RUN mkdir -p /run/nginx && \
+#     rm /etc/nginx/conf.d/default.conf
 
-# RUN wget https://wordpress.org/latest.tar.gz \
-# && tar -xvf latest.tar.gz \
-# && rm latest.tar.gz \
+COPY wp-config.php /var/www
+COPY entrypoint.sh /entrypoint.sh
+RUN chmod +x entrypoint.sh
 
-# #RUN mkdir /www 
-# RUN mv wordpress/ var/www/
+# RUN curl 'https://dl.influxdata.com/telegraf/releases/telegraf-1.16.0_linux_i386.tar.gz' > telegraf.tar.gz && \
+#     tar xvf telegraf.tar.gz && \
+#     mv 'telegraf-1.16.0' telegraf
+# COPY telegraf.conf /etc/telegraf/telegraf.conf
 
-# ADD /srcs/setup.sh 			/srcs/setup.sh
-# ADD /srcs/livenessprobe.sh	/srcs/livenessprobe.sh
+EXPOSE 5050
 
-# EXPOSE 5050
-
-# CMD ["sh", "/srcs/setup.sh"]
-
+CMD ["sh", "/entrypoint.sh"]
