--- a/srcs/grafana/grafana.yaml
+++ b/srcs/grafana/grafana.yaml
@@ -21,26 +21,42 @@ spec:
 apiVersion: apps/v1
 kind: Deployment
 metadata:
+  annotations:
+  creationTimestamp: null
+  generation: 1
+  labels:
+    app: grafana
   name: grafana-deployment
 spec:
+  progressDeadlineSeconds: 600
+  replicas: 1
+  revisionHistoryLimit: 10
   selector:
     matchLabels:
       app: grafana
-  replicas: 1
-  # strategy:
-  #   rollingUpdate:
-  #     maxSurge: 25%
-  #     maxUnavailable: 25%
-  #   type: RollingUpdate
+  strategy:
+    rollingUpdate:
+      maxSurge: 25%
+      maxUnavailable: 25%
+    type: RollingUpdate
   template:
     metadata:
+      creationTimestamp: null
       labels:
         app: grafana
     spec:
-      restartPolicy: Always
       containers:
-        - name: grafana-service
-          image: my-image-grafana
-          imagePullPolicy: Never
-          ports:
-            - containerPort: 3000
+      - envFrom:
+        # - secretRef:
+        #     name: grafana-secret
+        image: my-image-grafana
+        imagePullPolicy: IfNotPresent
+        name: grafana-service
+        resources: {}
+        terminationMessagePath: /dev/termination-log
+        terminationMessagePolicy: File
+      dnsPolicy: ClusterFirst
+      restartPolicy: Always
+      schedulerName: default-scheduler
+      securityContext: {}
+      terminationGracePeriodSeconds: 30
