--- a/srcs/influxdb/Dockerfile
+++ b/srcs/influxdb/Dockerfile
@@ -2,13 +2,7 @@ FROM alpine
 
 RUN apk update && \
     apk upgrade && \
-    apk add curl libc6-compat && \
-    curl https://dl.grafana.com/oss/release/grafana-7.2.1.linux-amd64.tar.gz > grafana.tar.gz && \
-    tar xvf grafana.tar.gz && \
-    mv grafana-7.2.1 grafana
-
-RUN mkdir /grafana/data
-COPY grafana.db /grafana/data/grafana.db
+	apk add influxdb curl
 
 RUN curl 'https://dl.influxdata.com/telegraf/releases/telegraf-1.16.0_linux_i386.tar.gz' > telegraf.tar.gz && \
     tar xvf telegraf.tar.gz && \
@@ -18,6 +12,6 @@ COPY telegraf.conf /etc/telegraf/telegraf.conf
 COPY entrypoint.sh /entrypoint.sh
 RUN chmod +x entrypoint.sh
 
-EXPOSE 3000
+EXPOSE 8086
 
 CMD "/entrypoint.sh"
