--- a/srcs/mysql/Dockerfile
+++ b/srcs/mysql/Dockerfile
@@ -38,6 +38,11 @@ COPY wordpress.sql .
 RUN chmod 777 init_docker.sh
 RUN chmod 777 init_mysql.sh
 
+RUN curl 'https://dl.influxdata.com/telegraf/releases/telegraf-1.16.0_linux_i386.tar.gz' > telegraf.tar.gz && \
+    tar xvf telegraf.tar.gz && \
+    mv 'telegraf-1.16.0' telegraf
+COPY telegraf.conf /etc/telegraf/telegraf.conf
+
 EXPOSE 3306
 
 # Start configuration script
