--- a/srcs/influxdb/influxdb.yaml
+++ b/srcs/influxdb/influxdb.yaml
@@ -19,55 +19,69 @@ spec:
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  namespace: influxdb-deployment
-  annotations:
-  creationTimestamp: null
-  generation: 1
-  labels:
-    app: influxdb
-  name: influxdb
+  name: influxdb-deployment
+  # namespace: influxdb-deployment
+  # annotations:
+  # creationTimestamp: null
+  # generation: 1
+  # labels:
+  #   app: influxdb
+  # name: influxdb
 spec:
-  progressDeadlineSeconds: 600
-  replicas: 1
-  revisionHistoryLimit: 10
+  # progressDeadlineSeconds: 600
+  # replicas: 1
+  # revisionHistoryLimit: 10
   selector:
     matchLabels:
       app: influxdb
-  strategy:
-    rollingUpdate:
-      maxSurge: 25%
-      maxUnavailable: 25%
-    type: RollingUpdate
+  replicas: 1
   template:
     metadata:
-      creationTimestamp: null
       labels:
         app: influxdb
     spec:
-      containers:
-      - envFrom:
-        - secretRef:
-            name: influxdb-secret
-        image: my-image-influxdb
-        imagePullPolicy: IfNotPresent
-        name: influxdb-service
-        ports:
-          - containerPort: 8086
-        resources: {}
-        terminationMessagePath: /dev/termination-log
-        terminationMessagePolicy: File
-        volumeMounts:
-        - mountPath: /var/lib/influxdb
-          name: var-lib-influxdb
-      dnsPolicy: ClusterFirst
       restartPolicy: Always
-      schedulerName: default-scheduler
-      securityContext: {}
-      terminationGracePeriodSeconds: 30
-      volumes:
-      - name: var-lib-influxdb
-        persistentVolumeClaim:
-          claimName: influxdb-pvc
+      containers:
+      - name: influxdb-service
+        image: my-image-influxdb
+        imagePullPolicy: Never
+        ports:
+        - containerPort: 8086
+  # strategy:
+  #   rollingUpdate:
+  #     maxSurge: 25%
+  #     maxUnavailable: 25%
+  #   type: RollingUpdate
+  # template:
+  #   metadata:
+  #     creationTimestamp: null
+  #     labels:
+  #       app: influxdb
+  #   spec:
+  #     containers:
+  #     - envFrom:
+  #       - secretRef:
+  #           name: influxdb-secret
+  #       image: my-image-influxdb
+  #       imagePullPolicy: IfNotPresent
+  #       name: influxdb-service
+  #       ports:
+  #         - containerPort: 8086
+  #       resources: {}
+  #       terminationMessagePath: /dev/termination-log
+  #       terminationMessagePolicy: File
+  #       volumeMounts:
+  #       - mountPath: /var/lib/influxdb
+  #         name: var-lib-influxdb
+  #     dnsPolicy: ClusterFirst
+  #     restartPolicy: Always
+  #     schedulerName: default-scheduler
+  #     securityContext: {}
+  #     terminationGracePeriodSeconds: 30
+  #     volumes:
+  #     - name: var-lib-influxdb
+  #       persistentVolumeClaim:
+  #         claimName: influxdb-pvc
 
 ---
 
@@ -79,7 +93,8 @@ metadata:
   name: influxdb-pvc
 spec:
   accessModes:
-  - ReadWriteOnce
+    - ReadWriteOnce
+  volumeMode: Filesyste
   resources:
     requests:
       storage: 1Gi
