--- a/srcs/nginx/Dockerfile
+++ b/srcs/nginx/Dockerfile
@@ -1,6 +1,6 @@
 FROM alpine:latest
 
-RUN apk update && apk add nginx && apk add openssl
+RUN apk update && apk add nginx && apk add openssl curl openssh openrc
 
 #remplacer fichier config nginx
 ADD /nginx.conf		/etc/nginx/nginx.conf
@@ -17,16 +17,21 @@ RUN openssl req -x509 -nodes -days 365 -newkey rsa:2048 -keyout /etc/ssl/private
 
 #RUN mkdir /etc/nginx/ssl \
 
-# CONGIF SSH
-#ADD /srcs/sshd_config 		/etc/ssh/
-
 RUN curl 'https://dl.influxdata.com/telegraf/releases/telegraf-1.16.0_linux_i386.tar.gz' > telegraf.tar.gz && \
     tar xvf telegraf.tar.gz && \
     mv 'telegraf-1.16.0' telegraf
 COPY telegraf.conf /etc/telegraf/telegraf.conf
 
-#RUN echo "daemon off;" >> /etc/nginx/nginx.conf
-EXPOSE 80 443
-CMD ["nginx", "-g", "daemon off;"]
-#CMD ["sh", "/setup.sh"]
+COPY setup.sh .
+RUN chmod +x setup.sh
+
+
+EXPOSE 80 443 
+EXPOSE 22
+
+CMD ./setup.sh
+
+# CMD ["nginx", "-g", "daemon off;"]
+
+
 
