--- a/srcs/wordpress/wordpress.yaml
+++ b/srcs/wordpress/wordpress.yaml
@@ -42,6 +42,14 @@ spec:
         - name: wordpress-service
           image: my-image-wordpress
           imagePullPolicy: Never
+          livenessProbe:
+            exec:
+              command:
+              - /bin/sh
+              - -c
+              - ps aux | grep -v grep | grep php-fpm
+            initialDelaySeconds: 5
+            periodSeconds: 5
           ports:
           - containerPort: 5050
           # livenessProbe:
