--- a/srcs/nginx/Dockerfile
+++ b/srcs/nginx/Dockerfile
@@ -1,6 +1,6 @@
 FROM alpine:latest
 
-RUN apk update && apk add nginx && apk add openssl curl openssh openrc
+RUN apk update && apk add nginx && apk add curl && apk add openssl libressl
 
 #remplacer fichier config nginx
 ADD /nginx.conf		/etc/nginx/nginx.conf
@@ -18,16 +18,20 @@ RUN openssl req -x509 -nodes -days 365 -newkey rsa:2048 -keyout /etc/ssl/private
 #RUN mkdir /etc/nginx/ssl \
 RUN curl 'https://dl.influxdata.com/telegraf/releases/telegraf-1.16.0_linux_i386.tar.gz' > telegraf.tar.gz && \
     tar xvf telegraf.tar.gz && \
-    mv 'telegraf-1.16.0' telegraf
+    mv 'telegraf-1.16.0' telegraf && rm telegraf.tar.gz 
 COPY telegraf.conf /etc/telegraf/telegraf.conf
 
 COPY setup.sh .
 RUN chmod +x setup.sh
 
 
-EXPOSE 80 443 
+EXPOSE 80
+EXPOSE 443
 
 CMD ./setup.sh
+
+# CMD ["nginx", "-g", "daemon off;"]
+# ENTRYPOINT nginx -g "daemon off;" ; /telegraf/usr/bin/telegraf
 
 
 
