--- a/srcs/nginx/nginx.conf
+++ b/srcs/nginx/nginx.conf
@@ -1,7 +1,7 @@
 
 #user www-data;
 #worker_processes auto;
-#pid /run/nginx.pid;
+# pid /run/nginx.pid;
 #include /etc/nginx/modules-enabled/*.conf;
 
 events {
@@ -76,9 +76,9 @@ http {
 				
 		server {
 			    listen 80;
-                listen [::]:80;
-
-                #server_name _;
+                listen [::]:80 ipv6only=on default_server;
+                # listen 192.168.99.132:80
+                server_name _;
 			    location / {
 				    return 301 			https://$host$request_uri;
                     #try_files $uri $uri/ =404;
@@ -89,7 +89,9 @@ http {
 
 		server {
 				listen 443 ssl;
-				listen [::]:443 ssl;
+				listen [::]:443 ipv6only=on default_server ssl;
+
+                # listen 192.168.99.132:443 ssl;
 
 				ssl_certificate 		/etc/ssl/certs/nginx-selfsigned.crt;
 				ssl_certificate_key 	/etc/ssl/private/nginx-selfsigned.key;
@@ -99,19 +101,19 @@ http {
                     try_files $uri $uri/ =404;
 				}
 
-                location /wordpress {
-                    return 307 http://$host:5050;
-                }
+                # location /wordpress {
+                #     return 307 http://$host:5050;
+                # }
 
-                location /phpmyadmin/ {
-                    index            index.php;
-                    proxy_pass       http://phpmyadmin-service:5000/;
-                    proxy_set_header Host $host;
-                    proxy_set_header X-Real-IP $remote_addr;
-                    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-                    proxy_set_header X-Forwarded-Proto $scheme;
-                    proxy_redirect   /index.php  /phpmyadmin/index.php;
-                }
+                # location /phpmyadmin/ {
+                #     index            index.php;
+                #     proxy_pass       http://phpmyadmin-service:5000/;
+                #     proxy_set_header Host $host;
+                #     proxy_set_header X-Real-IP $remote_addr;
+                #     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+                #     proxy_set_header X-Forwarded-Proto $scheme;
+                #     proxy_redirect   /index.php  /phpmyadmin/index.php;
+                # }
 
 		}
 
