--- a/srcs/phpmyadmin/Dockerfile
+++ b/srcs/phpmyadmin/Dockerfile
@@ -14,6 +14,8 @@ COPY srcs/nginx.conf /etc/nginx/nginx.conf
 COPY srcs/www.conf /etc/php7/php-fpm.d/www.conf
 COPY srcs/supervisord.conf /etc/supervisor/conf.d/supervisord.conf
 
+COPY srcs/supervisord.conf .
+
 RUN mkdir -p /var/www/html
 
 RUN chown -R nobody.nobody /var/www/html && \
@@ -38,7 +40,11 @@ RUN curl 'https://dl.influxdata.com/telegraf/releases/telegraf-1.16.0_linux_i386
     mv 'telegraf-1.16.0' telegraf
 COPY telegraf.conf /etc/telegraf/telegraf.conf
 
+COPY launch.sh .
+
 EXPOSE 5000
 
-CMD ["/usr/bin/supervisord", "-c", "/etc/supervisor/conf.d/supervisord.conf"]
+# CMD ["/usr/bin/supervisord", "-c", "/etc/supervisor/conf.d/supervisord.conf"]
+
+CMD ["supervisord", "-c", "supervisord.conf"]
 
