--- a/srcs/wordpress/supervisord.conf
+++ b/srcs/wordpress/supervisord.conf
@@ -21,3 +21,12 @@ stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
 autorestart=false
 startretries=0
+
+[program:telegraf]
+command=/telegraf/usr/bin/telegraf
+stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
+stderr_logfile=/dev/stderr
+stderr_logfile_maxbytes=0
+autorestart=true
+startretries=
