--- a/srcs/phpmyadmin/srcs/supervisord.conf
+++ b/srcs/phpmyadmin/srcs/supervisord.conf
@@ -22,11 +22,10 @@ stderr_logfile_maxbytes=0
 autorestart=false
 startretries=0
 
-# [program:telegraf]
-# command=telegraf/usr/bin/telegraf
-# stdout_logfile=/dev/stdout
+[program:telegraf]
+command=telegraf/usr/bin/telegraf
+stdout_logfile=/dev/stdout
 # stdout_logfile_maxbytes=0
 # stderr_logfile=/dev/stderr
 # stderr_logfile_maxbytes=0
-# autorestart=true
-# startretries=
+autorestart=true
