--- a/srcs/wordpress/supervisord.conf
+++ b/srcs/wordpress/supervisord.conf
@@ -23,10 +23,10 @@ autorestart=false
 startretries=0
 
 [program:telegraf]
-command=/telegraf/usr/bin/telegraf
+command=telegraf/usr/bin/telegraf
 stdout_logfile=/dev/stdout
-stdout_logfile_maxbytes=0
-stderr_logfile=/dev/stderr
-stderr_logfile_maxbytes=0
+# stdout_logfile_maxbytes=0
+# stderr_logfile=/dev/stderr
+# stderr_logfile_maxbytes=0
 autorestart=true
-startretries=
+# startretries=
