--- a/srcs/nginx/Dockerfile
+++ b/srcs/nginx/Dockerfile
@@ -1,13 +1,13 @@
 FROM alpine:latest
 
-RUN apk update && apk add nginx && apk add curl && apk add openssl libressl
+RUN apk update && apk add nginx curl openssl libressl supervisor
 
 #remplacer fichier config nginx
-ADD /nginx.conf		/etc/nginx/nginx.conf
+COPY nginx.conf		/etc/nginx
 
 #page à afficher, indiquer le chemin dans nginx.conf
 #RUN mkdir my_website
-ADD /index.html		var/www/
+COPY index.html		var/www/
 
 #pour éviter d'utiliser openrc qui fait tourner nginx en background
 RUN mkdir -p run/nginx
@@ -18,22 +18,19 @@ RUN openssl req -x509 -nodes -days 365 -newkey rsa:2048 -keyout /etc/ssl/private
 #RUN mkdir /etc/nginx/ssl \
 RUN curl 'https://dl.influxdata.com/telegraf/releases/telegraf-1.16.0_linux_i386.tar.gz' > telegraf.tar.gz && \
     tar xvf telegraf.tar.gz && \
-    mv 'telegraf-1.16.0' telegraf && rm telegraf.tar.gz 
+    mv 'telegraf-1.16.0' telegraf && rm telegraf.tar.gz
+
 COPY telegraf.conf /etc/telegraf/telegraf.conf
 
 COPY setup.sh .
+COPY supervisord.conf .
+
 RUN chmod +x setup.sh
 
 
 EXPOSE 80
 EXPOSE 443
 
-CMD ./setup.sh
+# CMD ./setup.sh
 
-# CMD ["nginx", "-g", "daemon off;"]
-# ENTRYPOINT nginx -g "daemon off;" ; /telegraf/usr/bin/telegraf
-
-# ENTRYPOINT /telegraf/usr/bin/telegraf; nginx -g "daemon off;"
-
-# ENTRYPOINT ["/telegraf/usr/bin/telegraf"]
-# CMD ["nginx", "-g", "daemon off;"]
+CMD ["supervisord", "-c", "supervisord.conf"]
