--- a/srcs/ftps/supervisord.conf
+++ b/srcs/ftps/supervisord.conf
@@ -4,23 +4,13 @@ logfile=/dev/null
 logfile_maxbytes=0
 pidfile=/run/supervisord.pid
 
-# [program:php-fpm]
-# command=php-fpm7 -F
-# stdout_logfile=/dev/stdout
-# stdout_logfile_maxbytes=0
-# stderr_logfile=/dev/stderr
-# stderr_logfile_maxbytes=0
-# autorestart=false
-# startretries=0
-
-[program:nginx]
-command=nginx -g 'daemon off;'
+[program:ftps]
+command=vsftpd /etc/vsftpd/vsftpd.conf
 stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
-# autorestart=true
-startretries=0
+autorestart=false
 
 [program:telegraf]
 command=telegraf/usr/bin/telegraf
