--- a/srcs/ftps/ftps.yaml
+++ b/srcs/ftps/ftps.yaml
@@ -10,10 +10,22 @@ spec:
   selector:
     app: ftps
   ports:
-    - name: ftps-port
+    - name: port-21
       port: 21
-      targetPort: 21
+      # targetPort: 21
       protocol: TCP
+    # - name: port-20
+    #   port: 20
+    #   targetPort: 20
+    #   protocol: TCP
+    - name: port-30020
+      port: 30020
+      # targetPort: 30020
+      protocol: TCP
+    # - name: ftps-30001
+    #   port: 30001
+    #   targetPort: 30001
+    #   protocol: TCP
   type: LoadBalancer
 
 ---
@@ -46,3 +58,7 @@ spec:
             periodSeconds: 5
           ports:
           - containerPort: 21
+          # - containerPort: 20
+          - containerPort: 30020
+          # - containerPort: 30001
+  
