--- a/srcs/ftps/supervisor.conf
+++ b/srcs/ftps/supervisor.conf
@@ -10,13 +10,23 @@ stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
-autorestart=false
+autorestart=true
 
-[program:telegraf]
-command=telegraf/usr/bin/telegraf
-stdout_logfile=/dev/stdout
+# [program:set_user_pass]
+
+# command=./set_user_pass.sh
+# stdout_logfile=/dev/stdout
 # stdout_logfile_maxbytes=0
 # stderr_logfile=/dev/stderr
 # stderr_logfile_maxbytes=0
-autorestart=true
-# startretries=
+# autorestart=true
+
+
+# [program:telegraf]
+# command=telegraf/usr/bin/telegraf
+# stdout_logfile=/dev/stdout
+# # stdout_logfile_maxbytes=0
+# # stderr_logfile=/dev/stderr
+# # stderr_logfile_maxbytes=0
+# autorestart=true
+# # startretries=
