--- a/srcs/ftps/vsftpd.conf
+++ b/srcs/ftps/vsftpd.conf
@@ -1,7 +1,256 @@
+# # ssl_enable=YES
+
+# # listen=YES
+# # anonymous_enable=YES
+# # local_enable=YES
+
+# # write_enable=NO
+# # xferlog_file=YES
+
+# # ftpd_banner=Welcome to blah FTP service.
+
+# # chroot_local_user=NO
+
+# # connect_from_port_20 = NO
+
+# # anon_root=/var/lib/ftp
+# # anon_upload_enable=YES
+
+# # rsa_cert_file=/etc/ssl/certs/vsftpd-selfsigned.crt
+# # rsa_private_key_file=/etc/ssl/private/vsftpd-selfsigned.key
+
+# ftpd_banner="ftps par vo-nguye"
+
+# listen=YES
+# anonymous_enable=YES
+
+# write_enable=YES
+# xferlog_file=YES
+# chroot_local_user=NO
+# seccomp_sandbox=NO
+# anon_root=/var/lib/ftp
+# anon_upload_enable=YES
+# local_enable=YES
+# local_umask=022
+# force_local_logins_ssl=NO
+# force_local_data_ssl=NO
+# ssl_enable=YES
+
+
+# allow_anon_ssl=YES
+
+# force_local_data_ssl=NO
+
+# force_local_logins_ssl=NO
+
+# ssl_tlsv1=YES
+
+# ssl_sslv2=NO
+
+
+# ssl_sslv3=NO
+
+# require_ssl_reuse=NO
+# ssl_ciphers=HIGH
+# rsa_cert_file=/etc/ssl-vsftpd/private/vsftpd.pem
+# rsa_private_key_file=/etc/ssl-vsftpd/private/vsftpd.key
+
+###########################################################
+# pasv_enable=YES
+# pasv_promiscuous=YES
+# pasv_min_port=30032
+# pasv_max_port=30033
+# pasv_address=192.168.99.132
+# # connect_from_port_20=YES
+###########################################################
+
+# listen=YES
+# seccomp_sandbox=NO
+# anonymous_enable=NO
+# local_enable=YES
+# write_enable=YES
+# local_umask=022
+# dirmessage_enable=YES
+# use_localtime=YES
+# xferlog_enable=YES
+# connect_from_port_20=YES
+# chroot_local_user=YES
+# secure_chroot_dir=/home/ftp_user
+# pam_service_name=vsftpd
+# rsa_cert_file=/etc/ssl/certs/vsftpd.crt
+# rsa_private_key_file=/etc/ssl/private/vsftpd.key
+# ssl_enable=YES
+# allow_writeable_chroot=YES
+# ssl_tlsv1=YES
+# ssl_sslv2=NO
+# ssl_sslv3=NO
+# pasv_enable=YES
+# pasv_promiscuous=YES
+# pasv_min_port=30000
+# pasv_max_port=30001
+# pasv_address=192.168.99.132
+
+##############################################################
+
+###############
+# Custom part #
+###############
+ftpd_banner=welcome to Flolefeb FTP server
 listen=YES
-anonymous_enable=YES
-write_enable=NO
-xferlog_file=YES
-chroot_local_user=NO
+#listen_port=4021
+#anomynous_enable=YES
+#anon_upload_enable=YES
+#anon_mkdir_write_enable=YES
+#anon_other_write_enable=YES
+#anon_world_readable_only=YES
+#anomynous_enable=NO
+#anon_upload_enable=NO
+#anon_mkdir_write_enable=NO
+#anon_other_write_enable=NO
+#anon_world_readable_only=NO
+local_enable=YES
+write_enable=YES
+local_umask=022
 seccomp_sandbox=NO
-local_root=/home/ftp
+# SSL options
+ssl_enable=YES
+#allow_anon_SSL=NO
+#force_local_data_ssl=YES
+#force_local_login_ssl=YES
+# Certains clients FTP necessitent cette ligne
+require_ssl_reuse=NO
+ssl_tlsv1=YES
+ssl_sslv2=YES
+ssl_sslv3=YES
+rsa_cert_file=/etc/ssl/certs/vsftpd.crt
+rsa_private_key_file=/etc/ssl/private/vsftpd.key
+allow_writeable_chroot=YES
+pasv_enable=YES
+#pasv_addr_resolve=YES
+#pasv_promiscuous=NO
+pasv_min_port=30020
+pasv_max_port=30020
+pasv_address=192.168.99.132
+
+#################################################################
+
+# seccomp_sandbox=NO
+# local_root=/home/ftp
+
+# # Example config file /etc/vsftpd.conf
+# #
+# # The default compiled in settings are fairly paranoid. This sample file
+# # loosens things up a bit, to make the ftp daemon more usable.
+# # Please see vsftpd.conf.5 for all compiled in defaults.
+# #
+# # READ THIS: This example file is NOT an exhaustive list of vsftpd options.
+# # Please read the vsftpd.conf.5 manual page to get a full idea of vsftpd's
+# # capabilities.
+# #
+# # Allow anonymous FTP? (Beware - allowed by default if you comment this out).
+# anonymous_enable=YES
+# #
+# # Uncomment this to allow local users to log in.
+# #local_enable=YES
+# #
+# # Uncomment this to enable any form of FTP write command.
+# #write_enable=YES
+# #
+# # Default umask for local users is 077. You may wish to change this to 022,
+# # if your users expect that (022 is used by most other ftpd's)
+# #local_umask=022
+# #
+# # Uncomment this to allow the anonymous FTP user to upload files. This only
+# # has an effect if the above global write enable is activated. Also, you will
+# # obviously need to create a directory writable by the FTP user.
+# #anon_upload_enable=YES
+# #
+# # Uncomment this if you want the anonymous FTP user to be able to create
+# # new directories.
+# #anon_mkdir_write_enable=YES
+# #
+# # Activate directory messages - messages given to remote users when they
+# # go into a certain directory.
+# dirmessage_enable=YES
+# #
+# # Activate logging of uploads/downloads.
+xferlog_enable=YES
+# #
+# # Make sure PORT transfer connections originate from port 20 (ftp-data).
+# connect_from_port_20=YES
+# #
+# # If you want, you can arrange for uploaded anonymous files to be owned by
+# # a different user. Note! Using "root" for uploaded files is not
+# # recommended!
+# #chown_uploads=YES
+# #chown_username=whoever
+# #
+# # You may override where the log file goes if you like. The default is shown
+# # below.
+# #xferlog_file=/var/log/vsftpd.log
+# #
+# # If you want, you can have your log file in standard ftpd xferlog format.
+# # Note that the default log file location is /var/log/xferlog in this case.
+# #xferlog_std_format=YES
+# #
+# # You may change the default value for timing out an idle session.
+# #idle_session_timeout=600
+# #
+# # You may change the default value for timing out a data connection.
+# #data_connection_timeout=120
+# #
+# # It is recommended that you define on your system a unique user which the
+# # ftp server can use as a totally isolated and unprivileged user.
+# #nopriv_user=ftpsecure
+# #
+# # Enable this and the server will recognise asynchronous ABOR requests. Not
+# # recommended for security (the code is non-trivial). Not enabling it,
+# # however, may confuse older FTP clients.
+# #async_abor_enable=YES
+# #
+# # By default the server will pretend to allow ASCII mode but in fact ignore
+# # the request. Turn on the below options to have the server actually do ASCII
+# # mangling on files when in ASCII mode.
+# # Beware that on some FTP servers, ASCII support allows a denial of service
+# # attack (DoS) via the command "SIZE /big/file" in ASCII mode. vsftpd
+# # predicted this attack and has always been safe, reporting the size of the
+# # raw file.
+# # ASCII mangling is a horrible feature of the protocol.
+# #ascii_upload_enable=YES
+# #ascii_download_enable=YES
+# #
+# # You may fully customise the login banner string:
+# #ftpd_banner=Welcome to blah FTP service.
+# #
+# # You may specify a file of disallowed anonymous e-mail addresses. Apparently
+# # useful for combatting certain DoS attacks.
+# #deny_email_enable=YES
+# # (default follows)
+# #banned_email_file=/etc/vsftpd.banned_emails
+# #
+# # You may specify an explicit list of local users to chroot() to their home
+# # directory. If chroot_local_user is YES, then this list becomes a list of
+# # users to NOT chroot().
+# # (Warning! chroot'ing can be very dangerous. If using chroot, make sure that
+# # the user does not have write access to the top level directory within the
+# # chroot)
+# #chroot_local_user=YES
+# #chroot_list_enable=YES
+# # (default follows)
+# #chroot_list_file=/etc/vsftpd.chroot_list
+# #
+# # You may activate the "-R" option to the builtin ls. This is disabled by
+# # default to avoid remote users being able to cause excessive I/O on large
+# # sites. However, some broken FTP clients such as "ncftp" and "mirror" assume
+# # the presence of the "-R" option, so there is a strong case for enabling it.
+# #ls_recurse_enable=YES
+# #
+# # When "listen" directive is enabled, vsftpd runs in standalone mode and
+# # listens on IPv4 sockets. This directive cannot be used in conjunction
+# # with the listen_ipv6 directive.
+# listen=YES
+# #
+# # This directive enables listening on IPv6 sockets. To listen on IPv4 and IPv6
+# # sockets, you must run two copies of vsftpd with two configuration files.
+# # Make sure, that one of the listen options is commented !!
+# #listen_ipv6=YES
