--- a/srcs/nginx/nginx.conf
+++ b/srcs/nginx/nginx.conf
@@ -101,19 +101,19 @@ http {
                     try_files $uri $uri/ =404;
 				}
 
-                # location /wordpress {
-                #     return 307 http://$host:5050;
-                # }
+                location /wordpress {
+                    return 307 http://$host:5050;
+                }
 
-                # location /phpmyadmin/ {
-                #     index            index.php;
-                #     proxy_pass       http://phpmyadmin-service:5000/;
-                #     proxy_set_header Host $host;
-                #     proxy_set_header X-Real-IP $remote_addr;
-                #     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-                #     proxy_set_header X-Forwarded-Proto $scheme;
-                #     proxy_redirect   /index.php  /phpmyadmin/index.php;
-                # }
+                location /phpmyadmin/ {
+                    index            index.php;
+                    proxy_pass       http://phpmyadmin-service:5000/;
+                    proxy_set_header Host $host;
+                    proxy_set_header X-Real-IP $remote_addr;
+                    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+                    proxy_set_header X-Forwarded-Proto $scheme;
+                    proxy_redirect   /index.php  /phpmyadmin/index.php;
+                }
 
 		}
 
