--- a/srcs/wordpress/Dockerfile
+++ b/srcs/wordpress/Dockerfile
@@ -2,12 +2,12 @@ FROM alpine
 
 RUN apk --no-cache add nginx supervisor curl
 
-RUN apk update && \
-    apk upgrade && \
-	apk add php7 php7-fpm php7-opcache php7-gd php7-mysqli \
-            php7-zlib php7-curl php7-mbstring php7-json php7-session curl \
-            php7-fpm nginx openrc && \
-    curl 'https://wordpress.org/wordpress-5.5.3.tar.gz' > wordpress.tar.gz
+RUN apk update upgrade
+
+RUN	apk add php7 php7-fpm php7-opcache php7-gd php7-mysqli \
+            php7-zlib php7-curl php7-mbstring php7-json php7-session  \
+            php7-fpm 
+RUN     curl 'https://wordpress.org/wordpress-5.5.3.tar.gz' > wordpress.tar.gz
 
 RUN tar xf wordpress.tar.gz && \
     rm -rf /var/www && \
