--- a/srcs/ftps/vsftpd.conf
+++ b/srcs/ftps/vsftpd.conf
@@ -130,7 +130,8 @@ pasv_enable=YES
 #pasv_promiscuous=NO
 pasv_min_port=30020
 pasv_max_port=30020
-pasv_address=172.17.0.2
+# pasv_address=172.17.0.2
+pasv_address=192.168.99.132
 
 #################################################################
 
