--- a/srcs/nginx/nginx.conf
+++ b/srcs/nginx/nginx.conf
@@ -97,6 +97,9 @@ http {
 				ssl_certificate_key 	/etc/ssl/private/nginx-selfsigned.key;
 
 				server_name _;
+
+                error_page 497 https://$host:443$request_uri;
+
 				location / {
                     try_files $uri $uri/ =404;
 				}
