--- a/srcs/phpmyadmin/srcs/supervisord.conf
+++ b/srcs/phpmyadmin/srcs/supervisord.conf
@@ -10,7 +10,7 @@ stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
-autorestart=false
+autorestart=true
 startretries=0
 
 [program:nginx]
@@ -19,7 +19,7 @@ stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
-autorestart=false
+autorestart=true
 startretries=0
 
 [program:telegraf]
