--- a/srcs/ftps/vsftpd.conf
+++ b/srcs/ftps/vsftpd.conf
@@ -98,9 +98,9 @@
 ftpd_banner=welcome to Flolefeb FTP server
 listen=YES
 #listen_port=4021
-#anomynous_enable=YES
-#anon_upload_enable=YES
-#anon_mkdir_write_enable=YES
+# anomynous_enable=YES
+anon_upload_enable=YES
+# anon_mkdir_write_enable=YES
 #anon_other_write_enable=YES
 #anon_world_readable_only=YES
 #anomynous_enable=NO
