--- a/srcs/nginx/supervisord.conf
+++ b/srcs/nginx/supervisord.conf
@@ -19,7 +19,7 @@ stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
-# autorestart=true
+autorestart=true
 startretries=0
 
 [program:telegraf]
