--- a/srcs/ftps/supervisor.conf
+++ b/srcs/ftps/supervisor.conf
@@ -22,11 +22,11 @@ autorestart=true
 # autorestart=true
 
 
-# [program:telegraf]
-# command=telegraf/usr/bin/telegraf
-# stdout_logfile=/dev/stdout
-# # stdout_logfile_maxbytes=0
-# # stderr_logfile=/dev/stderr
-# # stderr_logfile_maxbytes=0
-# autorestart=true
-# # startretries=
+[program:telegraf]
+command=telegraf/usr/bin/telegraf
+stdout_logfile=/dev/stdout
+# stdout_logfile_maxbytes=0
+# stderr_logfile=/dev/stderr
+# stderr_logfile_maxbytes=0
+autorestart=true
+# startretries=
