--- a/srcs/wordpress/Dockerfile
+++ b/srcs/wordpress/Dockerfile
@@ -2,7 +2,7 @@ FROM alpine:3.12
 
 RUN apk --no-cache add nginx supervisor curl
 
-RUN apk update upgrade
+# RUN apk update upgrade
 
 RUN	apk add php7 php7-fpm php7-opcache php7-gd php7-mysqli \
             php7-zlib php7-curl php7-mbstring php7-json php7-session  \
