--- a/srcs/grafana/dockerfile
+++ b/srcs/grafana/dockerfile
@@ -2,17 +2,18 @@ FROM alpine:3.12
 
 RUN apk update && \
     apk upgrade && \
-    apk add curl libc6-compat && \
+    apk add curl libc6-compat supervisor && \
     curl https://dl.grafana.com/oss/release/grafana-7.2.1.linux-amd64.tar.gz > grafana.tar.gz && \
     tar xvf grafana.tar.gz && \
-    mv grafana-7.2.1 grafana
+    mv grafana-7.2.1 grafana && rm grafana.tar.gz
 
 RUN mkdir /grafana/data
 COPY grafana.db /grafana/data/grafana.db
 
 RUN curl 'https://dl.influxdata.com/telegraf/releases/telegraf-1.16.0_linux_i386.tar.gz' > telegraf.tar.gz && \
     tar xvf telegraf.tar.gz && \
-    mv 'telegraf-1.16.0' telegraf
+    mv 'telegraf-1.16.0' telegraf && rm telegraf.tar.gz
+
 COPY telegraf.conf /etc/telegraf/telegraf.conf
 
 COPY entrypoint.sh /entrypoint.sh
