--- a/srcs/wordpress/wordpress.yaml
+++ b/srcs/wordpress/wordpress.yaml
@@ -41,7 +41,7 @@ spec:
       containers:
         - name: wordpress-service
           image: my-image-wordpress
-          imagePullPolicy: Never
+          imagePullPolicy: IfNotPresent
           # livenessProbe:
           #   exec:
           #     command:
