--- a/srcs/ftps/supervisord.conf
+++ b/srcs/ftps/supervisord.conf
@@ -6,7 +6,7 @@ pidfile=/run/supervisord.pid
 
 [program:ftps]
 command=vsftpd /etc/vsftpd/vsftpd.conf
-autorestart=false
+autorestart=true
 
 [program:telegraf]
 command=telegraf/usr/bin/telegraf
