--- a/srcs/nginx/supervisord.conf
+++ b/srcs/nginx/supervisord.conf
@@ -7,7 +7,7 @@ pidfile=/run/supervisord.pid
 
 [program:nginx]
 command=nginx -g 'daemon off;'
-autorestart=false
+autorestart=true
 
 [program:telegraf]
 command=telegraf/usr/bin/telegraf
