--- a/srcs/ftps/ftps.yaml
+++ b/srcs/ftps/ftps.yaml
@@ -39,13 +39,13 @@ spec:
         - name: ftps-service
           image: my-image-ftps
           imagePullPolicy: Never
-          livenessProbe:
-            exec:
-              command:
-              - sh
-              - check_liveness.sh
-            initialDelaySeconds: 5
-            periodSeconds: 5
+          # livenessProbe:
+          #   exec:
+          #     command:
+          #     - sh
+          #     - check_liveness.sh
+          #   initialDelaySeconds: 5
+          #   periodSeconds: 5
           ports:
           - containerPort: 21
           - containerPort: 30020
