--- a/srcs/ftps/telegraf.conf
+++ b/srcs/ftps/telegraf.conf
@@ -26,3 +26,21 @@
 
 [[inputs.disk]]
   ignore_fs = ["tmpfs", "devtmpfs", "devfs", "iso9660", "overlay", "aufs", "squashfs"]
+
+
+[[inputs.diskio]]
+
+
+[[inputs.kernel]]
+
+
+[[inputs.mem]]
+
+
+[[inputs.processes]]
+
+
+[[inputs.swap]]
+
+
+[[inputs.system]]
