--- a/srcs/mysql/telegraf.conf
+++ b/srcs/mysql/telegraf.conf
@@ -27,3 +27,20 @@
 [[inputs.disk]]
   ignore_fs = ["tmpfs", "devtmpfs", "devfs", "iso9660", "overlay", "aufs", "squashfs"]
 
+[[inputs.diskio]]
+
+
+[[inputs.kernel]]
+
+
+[[inputs.mem]]
+
+
+[[inputs.processes]]
+
+
+[[inputs.swap]]
+
+
+[[inputs.system]]
+
