--- a/srcs/wordpress/nginx.conf
+++ b/srcs/wordpress/nginx.conf
@@ -6,7 +6,7 @@ server {
 
     server_name localhost;
     index index.php;
-    root /var/www;
+    root /var/www/wordpress;
 
 	location / {
 		try_files $uri $uri/ =404;
